# MATH5311

./: random_mat.py
cpp/: .gitignore  CMakeLists.txt  gausselim.cpp  gausselim.ispc  main.cpp  random_mat.py
cpp/inc/: gausselim.hpp  matrices.hpp  rel_assert.h
fut/: .gitignore  Makefile  example_c  example_c.c
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/benches/: math.rs
rust/cargo/: config.toml
rust/src/: cholesky.rs  gauss_elim.rs  gauss_elim1.rs  gauss_elim2.rs  gauss_elim3.rs  lib.rs  main.rs
zig/: gausselim.c  gausselim.h
